# pigeon

./: .cta.json  .gitignore  CLAUDE.md  README.md  index.html  oxfmt.config.ts  oxlint.config.ts  package.json  react-doctor.config.json  tsconfig.json  vite.config.ts
.claude/: vibe-rules.md
.zed/: settings.json
docs/: android.md  discovery-multicast.md  index.html
docs/design/: CONTEXT.md  Pombo Mobile.html  Pombo.html  README.md  pombo-app.jsx  pombo-canvas.jsx  pombo-mobile-screens.jsx  pombo-mobile-ui.jsx  pombo-send.jsx  pombo-states.jsx  pombo-variations.jsx  win11-frame.jsx
docs/presentation/: index.html  styles.css
presentation-pigeon/: index.html
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  discovery.rs  lib.rs  network.rs  scan.rs  server.rs
src/components/: Header.tsx  IpBar.tsx  Panel.tsx  ReceivePanel.tsx  RequestSheet.tsx  SendPanel.tsx  StatusLog.tsx  header.tsx  ip-bar.tsx  panel.tsx  receive-indicator.tsx  receive-panel.tsx  request-sheet.tsx  send-panel.tsx  status-log.tsx  title-bar.tsx  transfer-indicator.tsx
src/context/: pigeon-context.tsx
src/hooks/: use-debug.ts  use-file-drop.ts  use-history.ts  use-local-ip.ts  use-logs.ts  use-network-info.ts  use-peers.ts  use-pigeon-controller.ts  use-receive-request.ts  use-receive.ts  use-received.ts  use-server.ts  use-transfer-events.ts  use-transfer.ts  usePigeonController.ts  useTransferEvents.ts
src/lib/: api.ts  device-id.ts  discovery-config.ts  format.ts  (+14 more)
(+22 files in other folders)
