[package]
name = "pigeon"
version = "0.1.0"
description = "A local file sharing app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "fs", "macros", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
bytes = "1"
local-ip-address = "0.6"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = "28.1.0"
